# wasm_evasion

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md
.github/.workflows/: build_and_deploy.yml
.github/workflows/: build_and_deploy.yml  build_docker_image.yml  build_docker_image_oracles.yml
RQ1/: NOTES.md  download_all.sh  run.py  run.sh
analyzer/: Cargo.toml  README.md  by_feature.sh  logs.txt  reduce_all_sh  watchdog.sh  watchdog_interval.sh  watchdog_process.sh
analyzer/benches/: bench.rs
analyzer/src/: config.yml  db.rs  errors.rs  extract.rs  info.rs  lib.rs  main.rs  meta.rs  reduce.rs
analyzer/src/subcommands/: export.rs  extract.rs  mod.rs  mutate.rs  reduce.rs
analyzer/tests/: oracle_size.sh
crates/analyzer/: Cargo.toml  watchdog.sh  watchdog_interval.sh  watchdog_interval_time.sh  watchdog_process.sh
crates/evasor/: Cargo.toml
crates/evasor/src/: db.rs  errors.rs  info.rs  lib.rs  logger.rs  meta.rs
crates/evasor/src/subcommands/: extract.rs  mod.rs  mutate.rs
crates/evasor/src/subcommands/mutate/: hasting.rs  mutation_factory.rs
crates/evasor/tests/: oracle_number_of_types.sh  oracle_number_of_types_and_funcs.sh  t.txt
crates/souperdiversifier/: Cargo.toml  README.md  build.rs
crates/souperdiversifier/libs/: .gitignore  README.md
crates/souperdiversifier/src/: bridge.rs  error.rs  lib.rs  parser.rs
crates/souperify/: Cargo.toml  build.rs
crates/wasm-tools/: .gitignore
experiments/kube_setup/: README.md  analyze.yml  deploy.sh  minio.yml  mount_volume.yml
kube/: analyze_depth1.yml  bisect_generic.yml  check_missing.py  check_vshare_hashes.yml  config.yml  create_items.py  deploy.sh  get_mutability_all_t10.yml  get_mutability_all_t5.yml  get_mutability_generic_time.yml  get_mutability_test.yml  mutate_generic.yml  mutate_generic_new.yml  mutate_generic_simple.yml  mutate_vt_generic.yml  mutate_vt_generic_multiple_minos.yml  mutate_vt_generic_multiple_oracle.yml  mutate_vt_generic_multiple_oracle_file_sidecar.yml  mutate_vt_generic_reward_minos_file.yml  mutate_vt_reward_multiple_oracle_file_sidecar.yml  mutate_vt_reward_multiple_oracle_file_sidecar_rq3.yml  mutate_vt_reward_weight_multiple_oracle_file_sidecar.yml  oracle.yml  roles.yml  save_all_in_minio.yml  vt.yml
malware_reproduction/rq2/: compare_minos.py  minos.py  pyproject.toml  requirements.txt
malware_reproduction/rq3/: README.md  get_table.py  get_table.v2.py  plot.sh  plot_distributions.py  table.sh
malware_reproduction/rq4/: profile.py
notebooks/: Comparison.ipynb  Dataset_plots.ipynb  Feature selection.ipynb  Features complexity.ipynb  MINOS.ipynb  Mutation map.ipynb  Oracle progress.ipynb  Pres.ipynb  Producer inferring.ipynb  RQ1.1.ipynb  RQ1.ipynb  RQ2.1-weight.ipynb  RQ2.1.ipynb  RQ2.ipynb  all.logs.txt  pure.py  requirements.txt  steps.py  steps4.py  test.wasm  utils.py  with_augmentation14.h5
notebooks/.ipynb_checkpoints/: Comparison-checkpoint.ipynb  Dataset_plots-checkpoint.ipynb  Feature selection-checkpoint.ipynb  MINOS-checkpoint.ipynb  Mutation map-checkpoint.ipynb  Oracle progress-checkpoint.ipynb  Pres-checkpoint.ipynb  Producer inferring-checkpoint.ipynb  RQ1-checkpoint.ipynb  RQ1.1-checkpoint.ipynb  RQ2-checkpoint.ipynb  RQ2.1-checkpoint.ipynb  RQ2.1-weight-checkpoint.ipynb
oracles/: minio.py  pandarize.py
oracles/minio/: README.md  create_csv.py  minio_bulk.py
oracles/minos/: data_set_builder.py  imaginator.py  minio.py
oracles/vt_custom_chrome/: .dockerignore  Dockerfile  README.md  check_all_details.sh  download_module.sh  entrypoint.sh  filter_share.py  get_hashes.py  parse_result.py  plot_count.py  plot_details.py  requirements.txt  setup.py  test.py  testcurl.sh  tor.sh  (+9 more)
(+185 files in other folders)
