[package]
name = "analyzer"
version = "0.1.0"
authors = []
edition = "2018"


[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = { version = "~2.27.0", features = ["yaml"] }
thiserror = "1.0"
wasmparser = "0.80.0"

# To save data
[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["sync"]