[package]
name = "analyzer"
version = "0.1.0"
authors = []
edition = "2018"


[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = { version = "~2.27.0", features = ["yaml"] }
thiserror = "1.0"
wasmparser = { path="../wasm-tools/crates/wasmparser" }
wasm-mutate = { path="../wasm-tools/crates/wasm-mutate", features=["none"], default-features=false }
wasm-shrink = { path="../wasm-tools/crates/wasm-shrink" }
wasmprinter = { path = "../wasm-tools/crates/wasmprinter" }
sha2 = "0.10.2"
env_logger = "0.9"
log = "0.4"
ctrlc = "3.2.2"

tempfile = "3.1"
anyhow = "1.0"

csv = "1.1.6"
bitflags = "1.3.2"

# To save data
[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["sync"]