[package]
name = "evasor"
version = "0.1.0"
authors = []
edition = "2018"


[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = { version = "~2.27.0", features = ["yaml"] }
thiserror = "1.0"
wasmparser = { path="../wasm-tools/crates/wasmparser" }
wasm-mutate = { path="../wasm-tools/crates/wasm-mutate", features=["none"], default-features=false }
wasm-shrink = { path="../wasm-tools/crates/wasm-shrink" }
wasmprinter = { path = "../wasm-tools/crates/wasmprinter" }
sha2 = "0.10.2"
env_logger = "0.9"
log = "0.4"
ctrlc = "3.2.2"
sled = "0.34.7"
stop-thread = "0.2.0"
tempfile = "3.1"
anyhow = "1.0"
lazy_static = "1.4.0"
rand = { version = "0.8.4", features = ["small_rng"] }
blake3 = "1.2.0"
fast-math = "0.1.1"
paste = "1.0"
csv = "1.1.6"
bitflags = "1.3.2"

[profile.bench]
debug = true
